<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200sp"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/jkh"/>
    <RelativeLayout
        android:id="@+id/rl"
        android:layout_centerInParent="true"
        android:layout_width="300dp"
        android:layout_height="208dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/giga_blue">
            <EditText
                android:id="@+id/edLogin"
                android:layout_width="292dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:inputType="text"
                android:background="@color/white"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:hint="@string/login"/>
            <EditText
                android:id="@+id/edPassword"
                android:layout_width="292dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:background="@color/white"
                android:layout_gravity="center"
                android:hint="@string/password"
                android:layout_marginTop="4dp"/>
            <EditText
                android:id="@+id/edGroup"
                android:layout_width="292dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:inputType="text"
                android:background="@color/white"
                android:layout_gravity="center"
                android:hint="@string/group"
                android:layout_marginTop="4dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@color/white"
                android:layout_marginTop="4dp">
                <Button
                    android:id="@+id/btLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_centerInParent="true"
                    android:layout_weight="1"
                    android:text="@string/bt_login"
                    android:backgroundTint="@color/mega_blue"/>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
    <TextView
        android:id="@+id/tvBottomText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/admin"/>
</RelativeLayout>